# duplicant

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: main.rs  signature.rs
vscode/: LICENSE  package.json  pnpm-lock.yaml
vscode/src/: extension.ts
vscode/src/lib/: duplicant-reader.ts  find-duplicant-file.ts  hash-path.ts
