[package]
name = "duplicant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.12"
glob = "0.3.1"
humantime = "2.1.0"
indexmap = "2.2.6"
num_cpus = "1.16.0"
sha1 = "0.10.6"
spin = { version = "0.9.8", features = ["lock_api", "lock_api_crate", "spin_mutex", "std"], default-features = false }
thiserror = "1.0.59"
